SERVER-50139: Abort repair on FCV initialization errors